tests/snapshots/multiline__multiline_search_and_navigate@002.snap
---
source: tests/multiline.rs
description: "input: items [\"aa\\\\nbb\", \"cc\\\\ndd\", \"aa\\\\ncc\"]\noptions: --multiline -q aa\nafter:\n  @key Up"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> aa                                                                            "
"  cc                                                                            "
"  aa                                                                            "
"  bb                                                                            "
"  2/3                                                                        1/0"
"> aa                                                                            "
cursor: (24, 5)
