tests/snapshots/multiline__multiline_search_second_line@001.snap
---
source: tests/multiline.rs
description: "input: items [\"first\\\\nsecond\", \"other\"]\noptions: --multiline -q second"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> first                                                                         "
"  second                                                                        "
"  1/2                                                                        0/0"
"> second                                                                        "
cursor: (24, 9)
