tests/snapshots/multiline__multiline_single_item@001.snap
---
source: tests/multiline.rs
description: "input: items [\"line1\\\\nline2\"]\noptions: --multiline"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> line1                                                                         "
"  line2                                                                         "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
