tests/snapshots/multiline__multiline_tabstop_1@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a\\tX\\\\nb\\tY\", \"xy\\tZ\\\\nw\\tV\"]\noptions: --multiline --tabstop 1"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  xy Z                                                                          "
"  w V                                                                           "
"> a X                                                                           "
"  b Y                                                                           "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
