tests/snapshots/multiline__multiline_tabstop_4@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a\\tX\\\\nb\\tY\", \"xy\\tZ\\\\nw\\tV\"]\noptions: --multiline --tabstop 4"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  xy  Z                                                                         "
"  w   V                                                                         "
"> a   X                                                                         "
"  b   Y                                                                         "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
