tests/snapshots/multiline__multiline_tabstop_default@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a\\tX\\\\nb\\tY\"]\noptions: --multiline"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> a       X                                                                     "
"  b       Y                                                                     "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
