tests/snapshots/multiline__multiline_tabstop_midline@001.snap
---
source: tests/multiline.rs
description: "input: items [\"col1\\tcol2\\\\ncol3\\tcol4\"]\noptions: --multiline --tabstop 6"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> col1  col2                                                                    "
"  col3  col4                                                                    "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
