tests/snapshots/multiline__multiline_tac@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline --tac"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  a                                                                             "
"  b1                                                                            "
"  b2                                                                            "
"> c                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
