tests/snapshots/multiline__multiline_three_lines@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a\\\\nb\\\\nc\"]\noptions: --multiline"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> a                                                                             "
"  b                                                                             "
"  c                                                                             "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
