tests/snapshots/multiline__multiline_with_header@001.snap
---
source: tests/multiline.rs
description: "input: items [\"a\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline --header my header"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  b1                                                                            "
"  b2                                                                            "
"> a                                                                             "
"  my header                                                                     "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
