tests/snapshots/multiline__multiline_with_nth@001.snap
---
source: tests/multiline.rs
description: "input: items [\"id1 line1\\\\nline2\", \"id2 line3\\\\nline4\",]\noptions: --multiline --with-nth 2.. --delimiter  "
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  line3                                                                         "
"  line4                                                                         "
"> line1                                                                         "
"  line2                                                                         "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
